--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: macos-latest
+    environment: build
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
