--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,5 +9,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - run : echo "$GH_TOKEN"
       - run: npm install
       - run: npm run build -- --x64 --arm64
