--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ./src/main.js",
-    "build": "CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder build"
+    "build": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder build"
   },
   "author": "Quincy Huang",
   "license": "MIT",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "electron": "^20.0.3",
     "electron-builder": "^23.3.3"
   },
